# schedule-website

./: .gitignore  Dockerfile  LICENSE  Pipfile  README.md  main.py  pyproject.toml
templates/: base.html  base.html.j2  base.jinja2  main.html  main.html.j2  main.jinja2  schedule.html  schedule.html.j2  schedule.jinja2
