[tool.poetry]
name = "ue-schedule-website"
version = "1.0.0"
description = ""
authors = ["Patrycja Bojdoł <pat.bojdol@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
ue-schedule = "^2.1.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
